# moeviz

./: README.md  pyproject.toml
client/src/: config.js  main.js
moeviz/: config.py  model_adapters.py  server.py
